# regional-vat-datasets

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
data/ca/parsed/: latest.json
data/ch/parsed/: latest.json
data/eu/parsed/: latest.json
data/eu/raw/: tedb_2025-05-28_to_2025-08-26.json  tedb_2025-07-27_to_2025-08-26.json
data/is/parsed/: latest.json
data/li/parsed/: latest.json
data/no/parsed/: latest.json
data/parsed/: latest.json
data/uk/parsed/: latest.json
src/vatkit/: __main__.py  adapters.py  ca.py  ch.py  cli.py  iceland.py  li.py  mapper.py  no.py  render.py  tedb.py  uk.py
tests/: test_mapper.py  test_schema.py
